[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/chikarego2/chikarego2.tres" type="DynamicFont" id=2]
[ext_resource path="res://animations/AnimBotonV.tres" type="Animation" id=3]
[ext_resource path="res://animations/AnimBotonF.tres" type="Animation" id=4]
[ext_resource path="res://displays/trivia/start_display/start_display.gd" type="Script" id=5]
[ext_resource path="res://displays/trivia/start_display/pregunta/PreguntaNode.tscn" type="PackedScene" id=6]

[node name="ControlIniciarJuego" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="MiddleLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Separator" type="MarginContainer" parent="MiddleLayer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 142.0
size_flags_vertical = 3

[node name="Respuestas" type="HBoxContainer" parent="MiddleLayer/VBoxContainer"]
margin_top = 146.0
margin_right = 512.0
margin_bottom = 288.0
size_flags_vertical = 3

[node name="RespuestaV" type="Label" parent="MiddleLayer/VBoxContainer/Respuestas"]
margin_top = 63.0
margin_right = 254.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "[correcto/incorrecto]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RespuestaF" type="Label" parent="MiddleLayer/VBoxContainer/Respuestas"]
margin_left = 258.0
margin_top = 63.0
margin_right = 512.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "[correcto/incorrecto]"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrontLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="FrontLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="FrontLayer/VBoxContainer"]
margin_right = 512.0
margin_bottom = 142.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.639216, 0.211765, 0.364706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="VBoxContainer" parent="FrontLayer/VBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="textPregunta" type="Label" parent="FrontLayer/VBoxContainer/ColorRect/CenterContainer"]
margin_top = 45.0
margin_right = 512.0
margin_bottom = 78.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Aqui va la pregunta 
"
align = 1
valign = 1
max_lines_visible = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puntaje" type="Label" parent="FrontLayer/VBoxContainer/ColorRect/CenterContainer"]
margin_top = 82.0
margin_right = 512.0
margin_bottom = 97.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Tu puntaje es: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botones" type="HBoxContainer" parent="FrontLayer/VBoxContainer"]
margin_top = 146.0
margin_right = 512.0
margin_bottom = 288.0
size_flags_vertical = 3

[node name="BotonVerdadero" type="Button" parent="FrontLayer/VBoxContainer/Botones"]
margin_right = 254.0
margin_bottom = 142.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
action_mode = 0
keep_pressed_outside = true
text = "Verdadero"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonFalso" type="Button" parent="FrontLayer/VBoxContainer/Botones"]
margin_left = 258.0
margin_right = 512.0
margin_bottom = 142.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 2 )
text = "Falso"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonAnimator" type="AnimationPlayer" parent="FrontLayer/VBoxContainer/Botones"]
anims/AnimBotonF = ExtResource( 4 )
anims/AnimBotonV = ExtResource( 3 )

[node name="PreguntaNode" parent="." instance=ExtResource( 6 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="FrontLayer/VBoxContainer/Botones/BotonVerdadero" to="." method="_on_BotonVerdadero_pressed"]
[connection signal="pressed" from="FrontLayer/VBoxContainer/Botones/BotonFalso" to="." method="_on_BotonFalso_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
